Add API spec for link dump importing (ref #28)
